proj: Fix some templates (documentation and default ones).
Basically I forgot to close some tags T_T.

--- a/misc/projector_styling.html
+++ b/misc/projector_styling.html
@@ -59,7 +59,7 @@ Example configuration:
 				&lt;td&gt;{{TIME}}&lt;/td&gt;
 			&lt;/tr&gt;
 			{{/CONTESTANT_SECTION}}
-		&lt;table&gt;
+		&lt;/table&gt;
 	&lt;/body&gt;
 &lt;/html&gt;</pre>
 
@@ -71,9 +71,6 @@ Example configuration:
 		&lt;h2&gt;Time: {{TIME_LEFT}}&lt;/h2&gt;
 		&lt;h2&gt;Question: {{QUESTION}}&lt;/h2&gt;
 		{{#ANSWER_SECTION}}&lt;h2&gt;Answer: {{ANSWER}}&lt;/h2&gt;{{/ANSWER_SECTION}}
-		&lt;ol&gt;
-			{{#CHOICE_SECTION}}&lt;li&gt;{{CHOICE}}&lt;/li&gt;{{/CHOICE_SECTION}}
-		&lt;/ol&gt;
 	&lt;/body&gt;
 &lt;/html&gt;</pre>
 <h2>timeboard.html</h2>
@@ -81,7 +78,7 @@ Example configuration:
 	&lt;body&gt;
 		&lt;h1&gt;{{CONTEST_NAME}} - Round {{STAGE_NUMBER}}&lt;/h1&gt;
 		&lt;h2&gt;Time: {{TIME_LEFT}}&lt;/h2&gt;
-	&lt;body&gt;
+	&lt;/body&gt;
 &lt;/html&gt;</pre>
 </body>
 </html>
