Upload new projector theme (WIP).

--- a/resources/projector_themes/it/index.html
+++ b/resources/projector_themes/it/index.html
@@ -1,10 +1,12 @@
 <html>
 	<head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<link rel="stylesheet" type="text/css" href="projector.css" />
+	<link href="projector.css" rel="stylesheet" type="text/css" />
 	</head>
 	<body>
+		<br /><br /><br />
+		<img src="logo.png" height="500" width="500" style =  "align: align-center" /><br />
 		<h1>{{CONTEST_NAME}} by Cerberus Contest System</h1>
-		<h2>&copy; <a href=\'http://www.compsat.org\'>CompSAt</a></h2>
+		<h2>&copy; brought to you by <a href=\'http://www.compsat.org\'>CompSAt</a></h2>
 	</body>
 </html>
