--- a/resources/projector_themes/it/index.html
+++ b/resources/projector_themes/it/index.html
@@ -4,8 +4,9 @@
 	<link href="projector.css" rel="stylesheet" type="text/css" />
 	</head>
 	<body>
-		<br /><br /><br />
-		<img src="logo.png" height="500" width="500" style =  "align: align-center" /><br />
+		<br /><br />
+		<img src="logo.png" height="500" width="500" style =  "align: align-center" />
+		<br /><br />
 		<h1>{{CONTEST_NAME}} by Cerberus Contest System</h1>
 		<h2>&copy; brought to you by <a href=\'http://www.compsat.org\'>CompSAt</a></h2>
 	</body>
