--- a/resources/projector_themes/it/qdisplay.html
+++ b/resources/projector_themes/it/qdisplay.html
@@ -8,9 +8,13 @@
 <body>
 
 	<h1>{{CONTEST_NAME}} - Round {{STAGE_NUMBER}}</h1>
-	<h1>Question Number: {{QUESTION_NUMBER}} out of {{QUESTION_TOTAL}}</h1>
-	<h2>Time: {{TIME_LEFT}}</h2>
-	<h2>Question: {{QUESTION}}</h2>
-	{{#ANSWER_SECTION}}<h2>Answer: {{ANSWER}}</h2>{{/ANSWER_SECTION}}
+	<h4>Question Number: {{QUESTION_NUMBER}} out of {{QUESTION_TOTAL}}</h4>
+	<h3>Time: {{TIME_LEFT}}</h3>
+	<br><br>
+	<h5>{{QUESTION}}</h5>
+	<br>
+	{{#ANSWER_SECTION}}<h1 style="text-align:left;font-size:28px;">
+	<br>
+	Answer: {{ANSWER}}</h1>{{/ANSWER_SECTION}}
 </body>
 </html>
